--- a/app/containers/BrowserTabsContainer/BrowserTabsContainer.styl
+++ b/app/containers/BrowserTabsContainer/BrowserTabsContainer.styl
@@ -26,11 +26,13 @@
     flex: 1;
     // to display the create new tab button
     padding-right: 30px;
-    max-width: 97%;
+    // max-width: calc(60vw);
     z-index: 80;
     min-height: 40px
     padding-left: 25px
     overflow-x: auto;
+    &::-webkit-scrollbar
+      display: none
   
 
 // button
